# game-of-life

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
game_of_life/: Cargo.toml
game_of_life-lib/: Cargo.toml
game_of_life-web/: eslint.config.js  package.json  vite.config.ts
game_of_life-web-native-lib/: Cargo.toml  package.json
game_of_life-web-native-lib/benches/: bench.rs
game_of_life-web-native-lib/src/: error.rs  lib.rs  timer.rs  universe.rs
game_of_life-web/src/: App.scss  App.tsx  hooks.ts  utils.ts
