[workspace]
members = ["game_of_life", "game_of_life-lib", "game_of_life-web-native-lib"]
default-members = ["game_of_life"]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
thiserror = "1.0.63"
tracing = "0.1.40"

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
features = ["parking_lot", "tracing-log", "env-filter"]

[profile.release.package.game_of_life-web-native-lib]
# Optimize for small code size.
opt-level = "s"

[profile.dev.package.game_of_life-web-native-lib]
opt-level = 3
