[package]
name = "game_of_life-web-native-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Logging crates
tracing = { workspace = true }

# Error handling crates
thiserror = { workspace = true }

# WASM-related crates
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# WASM-related crates
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Optimize for small code size.
opt-level = "s"
