[package]
name = "game_of_life-web-native-lib"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
# Logging crates
tracing = { workspace = true }

# Error handling crates
thiserror = { workspace = true }

# WASM-related crates
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.77", features = ["console"] }

# WASM-related crates
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
